<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txvTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/spn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvTitle"/>

    <CheckBox
        android:id="@+id/chb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breakfast1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spn"/>

    <CheckBox
        android:id="@+id/chb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb1"/>

    <CheckBox
        android:id="@+id/chb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb2"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb3"/>

    <TextView
        android:id="@+id/txvMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>